<resources>
    <string name="app_name">BLEConnect</string>

    <!-- AttributeLookup.java -->
    <string name="unknown_service">Unknown Service</string>
    <string name="unknown_char">unknown characteristic</string>
    <!-- BleDevicesActivity -->
    <string name="ble_not_supported">your device not support BLE</string>
    <!-- activity_ble_devices.xml -->
    <string name="bt_scan">scan</string>

    <string name="open_bt">please turn on the bluetooth switch</string>
    <string name="open_location">Please turn on the location switch</string>
    <string name="enabled">enabled</string>
    <string name="btn_back">Back</string>
    <!-- BTDeviceLVAdapter -->
    <string name="unknown_device">unknown device</string>
    <string name="hello_blank_fragment">no bt device data!!</string>
    <string name="no_services_fragment">no bt services data!!</string>

    <string name="tv_bt_rssi">-00dBm</string>
    <string name="begin">开始</string>
    <string name="tv_rssi">RSSI值</string>
    <string name="tv_rssi_data">-50dBm</string>
    <string name="connect_result">连接结果：null</string>

</resources>
